@@ -1,3 +1,7 @@
+20110520
+ - (djm) [session.c] call setexeccon() before executing passwd for pw
+   changes; bz#1891 reported by jchadima AT redhat.com; ok dtucker@
+
 20110515
  - (djm) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2011/05/05 05:12:08
